# specle

./: CMakeLists.txt  FFTW3Config.cmake  FFTW3LibraryDepends.cmake  README.md  compare.py  specle.job  viewh5.py
examples/: setup.spcl  setup1.spcl  setup_ex.spcl
src/: dataToAscii.cpp  dataToImg.cpp  globals.cpp  globals.hpp  io.cpp  io.hpp  parse.cpp  parse.hpp  range.hpp  specle.cpp  transfer.cpp  transfer.hpp
src/commands/: basicio.cpp  basicio.hpp  hdfio.cpp  hdfio.hpp  mutate.cpp  mutate.hpp  setters.cpp  setters.hpp  setup.cpp  setup.hpp
src/data/: data-util.cpp  data-util.hpp
